# YieldPrediction

./: .env.example  .gitattributes  .gitignore  .mcp.json  .ps1  LICENSE  debug_filter.py  pyproject.toml  rlm.ini
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  README.md  presCropYieldPrediction.md
src/: DagsHubAuth.py  NDVICalc.py  ReadKmlAndFindTheData.py  ReadSentinel.py  calculate_inscribed_bbox v6.py  calculate_inscribed_bbox.py  calculate_inscribed_bbox_v2.py  calculate_inscribed_bbox_v3.py  calculate_inscribed_bbox_v4.py  calculate_inscribed_bbox_v5.py  dagshubTry1.py  example.py  field_ndvi_v1.py  field_ndvi_v2.py  get_field_inside_coords-v_3.py  overlaped_rectangle_v1.py  overlaped_rectangle_v3.py  overlaped_rectangle_v4.py  overlaped_rectangle_v5.py  overlaped_rectangle_v6.py  plot the field.py  read_kml_v1.py  reading_geo_tif.py  scanTheDagshub.py  sentHubIO_v1.py  test x 1.py  test5.py
src/input/: khurz.kml  kur-kur-0012-8-2.geojson  monk.kml  tci.tif  test_buffer_500m.geojson  КУР-КУР-0012-8-1.kml  КУР-КУР-0042-2-4.kml  кур-гор-0003.kml  кур-кур-0012-8-2.kml
src/rlm/: __init__.py  cli.py  config.py  dagshub_search.py  downloader.py  indices.py  llm.py  models.py  processor.py  search.py  sentinel_filter.py  server.py
tests/: test_e2e_2025_one_per_month.py  test_e2e_monk.py  test_e2e_rlm.py  test_processor.py  test_specific_dates_2025.py
tests/fixtures/: test.kml
