[project]
name = "rlm"
version = "0.1.0"
description = "Remote Learning & Monitoring tools with MCP support"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "sentinelsat>=1.1.0",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "s3fs>=2024.0.0",
    "fsspec>=2024.0.0",
    "mgrs>=1.4.0",
    "fastkml>=0.12.0",
    "geopandas>=0.14.0",
    "rioxarray>=0.15.0",
    "litellm>=1.52.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "tqdm>=4.66.0",
]

[project.scripts]
rlm = "rlm.cli:app"
